[gd_scene load_steps=14 format=3 uid="uid://bexg2ourcye60"]

[ext_resource type="Script" uid="uid://xdncj00g2sfe" path="res://addons/CustomControls/Dialogs/no_wait_for_input_dialog.gd" id="1_i0glj"]
[ext_resource type="PackedScene" uid="uid://bnx7omk3joxly" path="res://addons/CustomControls/custom_button.tscn" id="1_krkri"]
[ext_resource type="Texture2D" uid="uid://xl88b63otgpi" path="res://addons/CustomControls/Images/button1_background.png" id="2_2vob2"]
[ext_resource type="PackedScene" uid="uid://bj48rsidmna6s" path="res://addons/CustomControls/custom_spin_box.tscn" id="2_7i3n6"]
[ext_resource type="Texture2D" uid="uid://dqnnp323vr1vo" path="res://addons/CustomControls/Images/button1_background_hover.png" id="3_oakwg"]
[ext_resource type="Texture2D" uid="uid://beg6i1p118qd" path="res://addons/CustomControls/Images/button1_background_selected.png" id="4_ydswv"]
[ext_resource type="Texture2D" uid="uid://bkfn4ru5noaaa" path="res://addons/CustomControls/Images/button1_background_disabled.png" id="5_yakkx"]

[sub_resource type="Gradient" id="Gradient_xvnf6"]
colors = PackedColorArray(0.184314, 0.2, 0.207843, 1, 0.278431, 0.294118, 0.301961, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_gt2kl"]
gradient = SubResource("Gradient_xvnf6")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pewyd"]
texture = ExtResource("2_2vob2")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xh6cd"]
texture = ExtResource("4_ydswv")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7402k"]
texture = ExtResource("3_oakwg")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yt3ui"]
texture = ExtResource("5_yakkx")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[node name="NoWaitForInputDialog" type="Window"]
oversampling_override = 1.0
title = "No Wait For Input"
position = Vector2i(0, 36)
size = Vector2i(484, 145)
wrap_controls = true
transient = true
exclusive = true
unresizable = true
script = ExtResource("1_i0glj")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_gt2kl")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="NoWait" type="CheckBox" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "[title]Not Wait For Input[/title]
Do not wait for input after displaying text and resumes after waiting for the specified time"
mouse_default_cursor_shape = 2
button_pressed = true
text = "Do not wait for input after displaying text"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Auto Advance:  "

[node name="Time" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("2_7i3n6")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "[title]Auto Advance Timer[/title]
After the specified number of seconds, the message will continue processing when \"no Wait For Input\" is enabled."
step = 0.01
rounded = false
allow_greater = true
suffix = " seconds"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="OKButton" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("1_krkri")]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "[title]Ok[/title]
Saves all changes and closes the windows."
theme_override_styles/normal = SubResource("StyleBoxTexture_pewyd")
theme_override_styles/pressed = SubResource("StyleBoxTexture_xh6cd")
theme_override_styles/hover = SubResource("StyleBoxTexture_7402k")
theme_override_styles/disabled = SubResource("StyleBoxTexture_yt3ui")
text = "OK"

[node name="CancelButton" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("1_krkri")]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "[title]Cancel[/title]
Closes this window without saving any changes."
theme_override_styles/normal = SubResource("StyleBoxTexture_pewyd")
theme_override_styles/pressed = SubResource("StyleBoxTexture_xh6cd")
theme_override_styles/hover = SubResource("StyleBoxTexture_7402k")
theme_override_styles/disabled = SubResource("StyleBoxTexture_yt3ui")
text = "CANCEL"

[connection signal="toggled" from="MarginContainer/VBoxContainer/NoWait" to="." method="_on_no_wait_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
